fix: popup spacing and form params

--- a/src/components/modals/EcossistemaGalaxy/index.module.css
+++ b/src/components/modals/EcossistemaGalaxy/index.module.css
@@ -52,5 +52,7 @@
   .wrapper {
     flex-direction: column;
     margin-top: 0px;
+    padding-bottom: 0px;
   }
+
 }
